# rust-learning

./: .gitignore  README.md
algorithm/src/: hashmap.rs  main.rs  vector.rs
axum-server/: Cargo.toml  README.md
axum-server/src/: app.rs  auth.rs  error.rs  main.rs  routes.rs
axum-server/src/handlers/: task.rs
axum-server/src/models/: task.rs
basic/: Cargo.toml  README.md
basic/src/: array.rs  json.md  main.rs  string.rs  vector.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs  mini_web_server.rs
my_project/advanced/: async.rs  cell_refcell.rs  closure.rs  concurrency_2.rs  concurrency_3.rs  concurrency_4.rs  concurrency_5.rs  concurrency_with_threads.rs  converse_type.rs  custom_type.rs  deref.rs  drop.rs  enum_int.rs  errors.rs  global_variable.rs  inline_assembly.rs  iterator.rs  lifetime.rs  macro.rs  mod.rs  multi-futures-simultaneous.rs  pin_unpin.rs  rc_arc.rs  self-referential.rs  sized.rs  smart_pointer.rs  stream.rs  unsafe_superpowers.rs  weak.rs
my_project/src/: advance_trait.rs  all_pattern.rs  array.rs  comment.rs  compound.rs  formatted_output.rs  generics.rs  if_else.rs  lib.rs  lifetime.rs  main.rs  method.rs  my_enum.rs  my_match.rs  my_struct.rs  my_trait.rs  ownership.rs  pattern_match.rs  result_error.rs  trait-object.rs  tuple.rs  variable.rs
my_project/src/base_type/: basic.rs  expression.rs  mod.rs  string_bool_unit.rs  (+1 more)
my_project/write_test/: test.rs  unit_test.rs
practice/: Cargo.toml  data.json
practice/src/: bak.rs  hacker_news.rs  main.rs
rust_web_project/: Cargo.toml
rust_web_project/src/: main.rs
(+8 files in other folders)
